--- a/style/style.css
+++ b/style/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    overflow-x: hidden;
+
     font-family: 'Inconsolata', monospace;
     color: white;
 }
@@ -40,11 +40,13 @@ body {
 }
 
 #logo {
-    margin-left: 40%;
-    margin-right: 40%;
-    height: 20%;
-    width: 20%;
-    border-radius: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-left: 35%;
+        height: 30vw;
+        width: 30vw;
+
     box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
@@ -123,6 +125,14 @@ body {
 
 }
 
+.box:hover {
+    border: solid white 2px;
+}
+
+#red:hover{
+    border: solid red 2px;
+}
+
 .icon {
     height: 4vw;
     width: 4vw;
@@ -184,7 +194,7 @@ body {
     }
 
     #logo {
-        margin-left: 37%;
+        margin-left: 35%;
         height: 30vw;
         width: 30vw;
         /* border-radius: 50%; */
@@ -255,6 +265,10 @@ body {
         margin-bottom: 20px;
         box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
+    }
+
+    .box.clicked {
+        border: solid white 2px;
     }
 
     .icon {
